Complete part of the user interface ....

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div>
         <form>
             <h2>Weather App</h2>
-            <input type="text">
-            <button></button>
+            <input type="text" placeholder="Search for a City...">
+            <button>Submit</button>
             <p></p>
         </form>
         <div class="city">
