Complete data capture from API

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div>
         <form>
             <h2>Weather App</h2>
-            <input type="text" placeholder="Search for a City...">
-            <button>Submit</button>
-            <p></p>
+            <input id="input_weather" type="text" placeholder="Search for a City...">
+            <button id="button_weather">Submit</button>
+            <p id="p_weather"></p>
         </form>
-        <div class="city">
+        <div class="city-all">
             <ul id="city">
 
             </ul>
